# slack-serverless

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  RELEASING.md  pyproject.toml
src/: slack_deferred_aws.py  slack_deferred_gcp.py  slack_messaging.py  slack_serverless.py
test/: __init__.py  slack_message_builders_test.py  slack_messaging_test.py
