[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slack-serverless"
version = "2024.1008"
description = "Simplified serverless Slack bot interactions"
readme = "README.md"
authors = [{ name = "Ross Bamford", email = "roscopeco@gmail.com" }]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["slack", "serverless", "cloud", "chatbot"]
dependencies = [
    "requests>=2.32.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "bumpver", "pre-commit", "isort", "pip-tools", "pytest", "sure", "httpretty"]

[project.urls]
Homepage = "https://github.com/roscopeco/slack-serverless"

[tool.bumpver]
current_version = "2024.1008"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]

[tool.black]
py36 = true
include = '\.pyi?$'
exclude = '''
    /(
        \.git
      | \.venv
      | _build
      | build
      | dist
    )/
    '''
